; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_userspace_example.c_main.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_userspace_example.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"Unable to init generic netlink\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i64 (...) @fast_classifier_init()
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @exit(i32 1) #3
  unreachable

11:                                               ; preds = %2
  %12 = call i32 @fast_classifier_ipv4_offload(i8 signext 97, i32 0, i32 0, i32 0, i32 0)
  %13 = call i32 (...) @fast_classifier_listen_for_messages()
  %14 = call i32 (...) @fast_classifier_close()
  ret i32 0
}

declare dso_local i64 @fast_classifier_init(...) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fast_classifier_ipv4_offload(i8 signext, i32, i32, i32, i32) #1

declare dso_local i32 @fast_classifier_listen_for_messages(...) #1

declare dso_local i32 @fast_classifier_close(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
